# calc-seed

./: Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml  trunk.toml
assets/: favicon.xcf  index.html  main.scss
src/: help.rs  lib.rs  main.rs  plot.rs  seed_helpers.rs  touch.rs
