[package]
name = "calc-seed"
version = "0.3.0"
authors = ["Martin Suesskraut <22873554+msuesskraut@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Simple calculator and linear solver as a webapp using wasm and seed"
repository = "https://github.com/msuesskraut/calc-seed"
homepage = "https://msuesskraut.github.io/calc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

rust-expression = { path = "../rust-expression" } # "0.3.0"
seed = { git = "https://github.com/seed-rs/seed", branch = "master", features = [ "markdown" ] } #"0.8.0"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "^0.3.50"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.23"