[package]
name = "calc-seed"
version = "0.3.1"
authors = ["Martin Suesskraut <22873554+msuesskraut@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Simple calculator and linear solver as a webapp using wasm and seed"
repository = "https://github.com/msuesskraut/calc-seed"
homepage = "https://msuesskraut.github.io/calc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

rust-expression = "0.3.1" # { path = "../rust-expression" } # "0.3.0"
seed = { version = "0.9.1", features = [ "markdown" ] }
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "^0.3.57"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.30"